--- a/src/app/server-browser/user-row/user-row.component.html
+++ b/src/app/server-browser/user-row/user-row.component.html
@@ -1,10 +1,9 @@
-<div class="user-row">
+<div class="user-row" style="padding-left: 20px;">
   <div class="row-header">
-    <p>{{userInfo.title}}</p>
+    <p>{{userInfo.client_nickname}}</p>
     <div>
-      <ng-container *ngFor="let icon of userInfo.icons">
-        <!-- icon goes here -->
-      </ng-container>
+      <!-- <ng-container *ngFor="let icon of userInfo.icons">
+      </ng-container> -->
     </div>
   </div>
 </div>
