Added response and business models.

--- a/src/app/server-browser/channel-row/channel-row.component.html
+++ b/src/app/server-browser/channel-row/channel-row.component.html
@@ -6,7 +6,7 @@
       </ng-container> -->
     </div>
   </div>
-  <ng-container *ngFor="let user of channelInfo.users">
+  <ng-container *ngFor="let user of users">
     <user-row [userInfo]="user"></user-row>
   </ng-container>
   <!-- <ng-container *ngFor="let channel of channelInfo.">
