--- a/src/app/server-browser/server-browser.component.html
+++ b/src/app/server-browser/server-browser.component.html
@@ -1,5 +1,5 @@
 <div class="server-browser-container">
   <ng-container *ngFor="let channel of channels">
-    <channel-row [channelInfo]="channel"></channel-row>
+    <channel-row [channelInfo]="channel?.channelInfo" [users]="channel?.users"></channel-row>
   </ng-container>
 </div>
