--- a/src/app/server-browser/server-browser.component.html
+++ b/src/app/server-browser/server-browser.component.html
@@ -1,6 +1,6 @@
 <div class="server-browser-container">
   <button (click)="debugPause()">Click here to debug</button>
-  <ng-container *ngFor="let channel of channels">
-    <channel-row [channelInfo]="channel?.channelInfo" [users]="channel?.users"></channel-row>
+  <ng-container *ngFor="let c of topChannels">
+    <channel-row [channel]="c"></channel-row>
   </ng-container>
 </div>
