Burning it all down. Reworking cache updates to use Observables.

--- a/src/app/server-browser/channel-row/channel-row.component.html
+++ b/src/app/server-browser/channel-row/channel-row.component.html
@@ -1,6 +1,6 @@
 <div class="channel-row" [ngClass]="{'sub-channel': isSubChannel}">
   <div class="row-header">
-    <p>{{channel.channelInfo.channel_name}}</p>
+    <p>{{channel.channel_name}}</p>
     <div>
       <!-- <ng-container *ngFor="let icon of channelInfo.getIcon">
       </ng-container> -->
