--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <h1>Server Browser UI</h1>
 <server-browser></server-browser>
-<button (click)="connectAudio()">Connect Audio</button>
+<button (click)="initializeAudio()">Connect Audio</button>
