Working on WRTC implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Server Browser UI</h1>
 <server-browser></server-browser>
 <button (click)="initializeAudio()">Connect Audio</button>
+<button (click)="debugPause()">Click here to debug</button>
