First successful RTC implementation. Moved to HTTPS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <server-browser></server-browser>
 <button (click)="initializeAudio()">Connect Audio</button>
 <button (click)="debugPause()">Click here to debug</button>
+<audio #audioElement autoplay="true" muted="false"></audio>
