--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,50 @@
-<h1>Server Browser UI</h1>
-<server-browser></server-browser>
-<button (click)="initializeAudio()">Connect Audio</button>
-<button (click)="debugPause()">Click here to debug</button>
-<audio #audioElement autoplay="true" muted="false"></audio>
+<!-- <h1>Server Browser UI</h1> -->
+<div class="ts-page-container">
+  <mat-toolbar class="toolbar">
+    <span>TS Server Browser</span>
+  </mat-toolbar>
+  <mat-sidenav-container [autosize]="false" class="page-content">
+    <mat-sidenav mode="side" opened>
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Contacts
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Self
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Tools
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+        </mat-expansion-panel>
+
+        <!-- <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Help
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+        </mat-expansion-panel> -->
+      </mat-accordion>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <server-browser></server-browser>
+      <button (click)="initializeAudio()">Connect Audio</button>
+      <button (click)="debugPause()">Click here to debug</button>
+      <button (click)="closeConnection()">close connection</button>
+      <audio #audioElement autoplay="true" muted="false"></audio>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
