--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,14 @@ height: 100%;
     position: fixed;
     height: 45px;
     z-index: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .toolbar-header {
+      display: flex;
+      align-items: center;
+    }
   }
 
   .page-content {
@@ -16,5 +24,12 @@ height: 100%;
 
   mat-expansion-panel {
     width: 15vw;
+  }
+
+  .contact-icons {
+    display: flex;
+    flex-direction: row;
+    width: 5vw;
+    justify-content: center;
   }
 }
