Fixed audio to not use an audio element. Sidebar stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
       <button (click)="initializeAudio()">Connect Audio</button>
       <button (click)="debugPause()">Click here to debug</button>
       <button (click)="closeConnection()">close connection</button>
-      <audio #audioElement autoplay="true" muted="false"></audio>
+      <!-- <audio #audioElement autoplay="true" muted="false"></audio> -->
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
