--- a/src/app/server-browser/channel-row/channel-row.component.html
+++ b/src/app/server-browser/channel-row/channel-row.component.html
@@ -6,8 +6,8 @@
       </ng-container> -->
     </div>
   </div>
-  <ng-container *ngFor="let user of channel.users">
-    <user-row [userInfo]="user"></user-row>
+  <ng-container *ngFor="let client of channel.clients">
+    <client-row [clientInfo]="client"></client-row>
   </ng-container>
   <ng-container *ngFor="let c of channel.subChannels">
     <channel-row [channel]="c"></channel-row>
