Added logic for switching channels in channel-row

--- a/src/app/server-browser/channel-row/channel-row.component.html
+++ b/src/app/server-browser/channel-row/channel-row.component.html
@@ -1,4 +1,4 @@
-<div class="channel-row" [ngClass]="{'sub-channel': isSubChannel}">
+<div class="channel-row" [ngClass]="{'sub-channel': isSubChannel}" (dblclick)="joinChannel()">
   <div class="row-header">
     <p>{{channel.channel_name}}</p>
     <div>
