--- a/src/app/server-browser/user-row/user-row.component.html
+++ b/src/app/server-browser/user-row/user-row.component.html
@@ -1,6 +1,6 @@
 <div class="user-row" style="padding-left: 20px;">
   <div class="row-header">
-    <p>{{userInfo.client_nickname}}</p>
+    <p>{{userInfo.nickname}}</p>
     <div class="icon-container">
       <ng-container>
         <img class="channel-group" *ngFor="let icon of channelGroupIcons" tsIcon [icon]="icon.data">
