Work on tooltips and avatar/away status cleanups

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,5 @@
       <!-- <audio #audioElement autoplay="true" muted="false"></audio> -->
     </mat-sidenav-content>
   </mat-sidenav-container>
+  <ng-template #overlayLocation></ng-template>
 </div>
