--- a/src/app/server-browser/channel-row/channel-row.component.scss
+++ b/src/app/server-browser/channel-row/channel-row.component.scss
@@ -2,7 +2,7 @@
   .row-header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
   }
 
   &.sub-channel {
