--- a/src/app/server-browser/server-browser.component.html
+++ b/src/app/server-browser/server-browser.component.html
@@ -1,6 +1,6 @@
 <div class="server-browser-container">
   <!-- make a channel-root component here for encapsulation. -->
-  <ng-container *ngFor="let c of topChannels">
+  <ng-container *ngFor="let c of channels">
     <channel-row [channel]="c"></channel-row>
   </ng-container>
 </div>
