--- a/src/app/server-browser/channel-row/channel-row.component.html
+++ b/src/app/server-browser/channel-row/channel-row.component.html
@@ -1,15 +1,15 @@
 <div class="channel-row" [ngClass]="{'sub-channel': isSubChannel}" (dblclick)="joinChannel()">
   <div class="row-header">
     <div class="row-collapse" [ngStyle]="{'flip-arrow': 'collapsed'}" (click)="collapsed = !collapsed"></div>
-    <p>{{channel.channel_name}}</p>
+    <p>{{channel.name}}</p>
     <div>
       <!-- <ng-container *ngFor="let icon of channelInfo.getIcon">
       </ng-container> -->
     </div>
   </div>
-  <ng-container *ngIf="collapsed">
+  <ng-container *ngIf="!collapsed">
     <ng-container *ngFor="let client of channel.clients">
-      <client-row [clientInfo]="client"></client-row>
+      <client-row [clientInfo]="client" [channel]="this.channel"></client-row>
     </ng-container>
     <ng-container *ngFor="let c of channel.subChannels">
       <channel-row [channel]="c"></channel-row>
