--- a/src/app/sidenav/sidenav-content/sidenav-content.component.scss
+++ b/src/app/sidenav/sidenav-content/sidenav-content.component.scss
@@ -10,6 +10,7 @@
     flex-direction: row;
     align-items: center;
     margin-bottom: 5px;
+    position: relative;
 
     .avatar {
       width: 40px;
@@ -18,39 +19,47 @@
       flex-shrink: 0;
       border-radius: 50%;
       position: relative;
+      overflow: hidden;
 
-      .away-status-container {
+      .avatar-img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+    }
+
+    .away-status-container {
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+      left: 22px;
+      bottom: -2px;
+      background: white;
+      position: absolute;
+
+      .away-status {
         border-radius: 50%;
-        width: 18px;
-        height: 18px;
-        right: 0px;
-        bottom: 0px;
-        background: white;
+        width: 14px;
+        height: 14px;
+        right: 2px;
+        bottom: 2px;
         position: absolute;
 
-        .away-status {
-          border-radius: 50%;
-          width: 14px;
-          height: 14px;
-          right: 2px;
-          bottom: 2px;
-          position: absolute;
+        &.ACTIVE {
+          background: #58af58;
+        }
 
-          &.ACTIVE {
-            background: green;
-          }
+        &.INACTIVE {
+          background: #e0e01b;
+        }
 
-          &.INACTIVE {
-            background: yellow;
-          }
+        &.AWAY {
+          background: #ea2d2d;
+        }
 
-          &.AWAY {
-            background: red;
-          }
-
-          &.OFFLINE {
-            background: gray;
-          }
+        &.OFFLINE {
+          background: gray;
         }
       }
     }
